@@ -7809,7 +7809,7 @@ sub read_am_file ($)
 	elsif (/$WHITE_PATTERN/o)
 	{
 	    err "$amfile:$.", "blank line following trailing backslash"
-	      if $saw_bk;
+	      if $saw_bk && $prev_state != IN_COMMENT;
 	    # Stick a single white line before the incoming macro or rule.
 	    $spacing = "\n";
 	    $blank = 1;
@@ -7871,7 +7871,7 @@ sub read_am_file ($)
 	    # Stick a single white line before the incoming macro or rule.
 	    $spacing = "\n";
 	    err $here, "blank line following trailing backslash"
-	      if $saw_bk;
+	      if $saw_bk && $prev_state != IN_COMMENT;
 	}
 	elsif (/$COMMENT_PATTERN/o)
 	{
