@@ -70,6 +70,7 @@ comment4.test \
 comment5.test \
 comment6.test \
 comment7.test \
+comment8.test \
 compile_f_c_cxx.test \
 cond.test \
 cond2.test \
