@@ -1,0 +1,47 @@
+#! /bin/sh
+# Copyright (C) 2002  Free Software Foundation, Inc.
+#
+# This file is part of GNU Automake.
+#
+# GNU Automake is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2, or (at your option)
+# any later version.
+#
+# GNU Automake is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with autoconf; see the file COPYING.  If not, write to
+# the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
+# Boston, MA 02111-1307, USA.
+
+# Test for PR/379.  Do not print `blank line following trailing backslash'
+# when the backslash is in a comment.  People find this natural to comment
+# out part of backslashed blocks this way.
+
+. ./defs || exit 1
+
+set -e
+
+echo AC_PROG_CC >> configure.in
+
+cat > Makefile.am << 'EOF'
+# foo \
+
+test_SOURCES = a.c \
+	       c.c
+#              b.c \
+
+bin_PROGRAMS = test \
+	       foo \
+	       baz
+#              bar \
+
+EXTRA_DIST = mumble
+EOF
+
+$ACLOCAL
+$AUTOMAKE
