@@ -1,4 +1,6 @@
 Bugs fixed in 1.7.1c:
+* Do not complain about backslashes before blank lines when the backslash
+  is in a comment. (PR/379)
 * Fix ansi2knr rules for LIBOBJS sources.
 * Clean all known Texinfo index files, not only those which appear to
   be used, because we cannot know wich indexes are used in included files.
